feat: добавить верстку модального  окна

--- a/index.html
+++ b/index.html
@@ -18,57 +18,68 @@
                 <div class="profile__info">
                     <div class="profile__info-discription">
                         <h1 class="profile__title">Жак-Ив Кусто</h1>
-                        <button class="profile__edit" type="button"></button>
+                        <button class="profile__edit-btn" type="button"></button>
                     </div>
                     <p class="profile__subtitle">Исследователь океана</p>
                 </div>
-                <button class="profile__add-button" type="button"></button>
+                <button class="profile__add-btn" type="button"></button>
             </section>
             <section class="elements">
                 <article class="element">
                     <img class="element__img" alt="Фотография места" src="./images/elem1.jpg">
                     <div class="element__caption">
                         <h2 class="element__title">Карачаевск</h2>
-                        <button class="element__like" type="button"></button>
+                        <button class="element__like-btn" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" alt="Фотография места" src="./images/elem1.jpg">
                     <div class="element__caption">
                         <h2 class="element__title">Карачаево-Черкесия</h2>
-                        <button class="element__like" type="button"></button>
+                        <button class="element__like-btn" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" alt="Фотография места" src="./images/elem1.jpg">
                     <div class="element__caption">
                         <h2 class="element__title">Карачаевск</h2>
-                        <button class="element__like" type="button"></button>
+                        <button class="element__like-btn" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" alt="Фотография места" src="./images/elem1.jpg">
                     <div class="element__caption">
                         <h2 class="element__title">Карачаевск</h2>
-                        <button class="element__like" type="button"></button>
+                        <button class="element__like-btn" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" alt="Фотография места" src="./images/elem1.jpg">
                     <div class="element__caption">
                         <h2 class="element__title">Карачаевск</h2>
-                        <button class="element__like" type="button"></button>
+                        <button class="element__like-btn" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" alt="Фотография места" src="./images/elem1.jpg">
                     <div class="element__caption">
                         <h2 class="element__title">Карачаевск</h2>
-                        <button class="element__like" type="button"></button>
+                        <button class="element__like-btn" type="button"></button>
                     </div>
                 </article>
             </section>
         </main>
         <footer class="footer">© 2023. Евгений Салаутин</footer>
+        <div class="popup">
+            <div class="popup__edit-form">
+                <button type="button" class="popup__close-btn"></button>
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <form name="profileInfo" class="popup__form">
+                    <input type="text" name="name" placeholder="Имя" class="popup__text popup__text_name">
+                    <input type="text" name="status" placeholder="Статус" class="popup__text popup__text_status">
+                    <button type="submit" class="popup__submit-btn">Сохранить</button>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
