--- a/index.html
+++ b/index.html
@@ -81,5 +81,6 @@
                 </form>
             </div>
         </div>
+        <script src="./scripts/index.js" defer></script>
     </body>
 </html>
