fix: исправить пропорции изображений

--- a/index.html
+++ b/index.html
@@ -33,37 +33,37 @@
                     </div>
                 </article>
                 <article class="element">
-                    <img class="element__img" alt="Фотография места" src="./images/elem1.jpg">
+                    <img class="element__img" alt="Фотография места" src="./images/park_drakonov.jpeg">
                     <div class="element__caption">
-                        <h2 class="element__title">Карачаево-Черкесия</h2>
+                        <h2 class="element__title">Парк драконов</h2>
                         <button class="element__like-btn" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
-                    <img class="element__img" alt="Фотография места" src="./images/elem1.jpg">
+                    <img class="element__img" alt="Фотография места" src="./images/tlyakovskogo.jpeg">
                     <div class="element__caption">
-                        <h2 class="element__title">Карачаевск</h2>
+                        <h2 class="element__title">Бухта Теляковского</h2>
                         <button class="element__like-btn" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
-                    <img class="element__img" alt="Фотография места" src="./images/elem1.jpg">
+                    <img class="element__img" alt="Фотография места" src="./images/astafyeva.jpeg">
                     <div class="element__caption">
-                        <h2 class="element__title">Карачаевск</h2>
+                        <h2 class="element__title">Бухта Астафьева</h2>
                         <button class="element__like-btn" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
-                    <img class="element__img" alt="Фотография места" src="./images/elem1.jpg">
+                    <img class="element__img" alt="Фотография места" src="./images/triozerje.jpeg">
                     <div class="element__caption">
-                        <h2 class="element__title">Карачаевск</h2>
+                        <h2 class="element__title">Бухта Треозерье</h2>
                         <button class="element__like-btn" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
-                    <img class="element__img" alt="Фотография места" src="./images/elem1.jpg">
+                    <img class="element__img" alt="Фотография места" src="./images/Dybovaya.jpeg">
                     <div class="element__caption">
-                        <h2 class="element__title">Карачаевск</h2>
+                        <h2 class="element__title">Бухта Дубовая</h2>
                         <button class="element__like-btn" type="button"></button>
                     </div>
                 </article>
