refactor: структурировать по БЭМ

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         </header>
         <main>
             <section class="profile">
-                <div class="profile__avatar">
-                    <img class="prifile__img" src="./images/avatar.jpg" alt="аватар">
-                </div>
+                <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар">
                 <div class="profile__info">
                     <div class="profile__info-discription">
                         <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -56,7 +54,7 @@
                 <article class="element">
                     <img class="element__img" alt="Фотография места" src="./images/triozerje.jpeg">
                     <div class="element__caption">
-                        <h2 class="element__title">Бухта Треозерье</h2>
+                        <h2 class="element__title">Бухта Триозерье</h2>
                         <button class="element__like-btn" type="button"></button>
                     </div>
                 </article>
