--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <section class="profile">
                 <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар">
                 <div class="profile__info">
-                    <div class="profile__info-discription">
-                        <h1 class="profile__title">Жак-Ив Кусто</h1>
+                    <div class="profile__title">
+                        <h1 class="profile__name">Жак-Ив Кусто</h1>
                         <button class="profile__edit-btn" type="button"></button>
                     </div>
                     <p class="profile__subtitle">Исследователь океана</p>
