--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </main>
         <footer class="footer">© 2023. Евгений Салаутин</footer>
         <div class="popup">
-            <div class="popup__edit-form">
+            <div class="popup__container">
                 <button type="button" class="popup__close-btn"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form name="profileInfo" class="popup__form">
