--- a/index.html
+++ b/index.html
@@ -67,14 +67,16 @@
                 </article>
             </section>
         </main>
-        <footer class="footer">© 2023. Евгений Салаутин</footer>
+        <footer class="footer">
+            <p class="footer__copyright">© 2023. Евгений Салаутин</p>
+        </footer>
         <div class="popup">
             <div class="popup__container">
                 <button type="button" class="popup__close-btn"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <form name="profileInfo" class="popup__form">
-                    <input type="text" name="name" placeholder="Имя" class="popup__text popup__text_name">
-                    <input type="text" name="status" placeholder="Статус" class="popup__text popup__text_status">
+                <form name="profile-info" class="popup__form">
+                    <input type="text" name="name" placeholder="Имя" class="popup__text popup__text_type_name">
+                    <input type="text" name="status" placeholder="Статус" class="popup__text popup__text_type_status">
                     <button type="submit" class="popup__submit-btn">Сохранить</button>
                 </form>
             </div>
