--- a/index.html
+++ b/index.html
@@ -23,54 +23,22 @@
                 <button class="profile__add-btn" type="button"></button>
             </section>
             <section class="elements">
-                <article class="element">
-                    <img class="element__img" alt="Фотография места" src="./images/elem1.jpg">
-                    <div class="element__caption">
-                        <h2 class="element__title">Карачаевск</h2>
-                        <button class="element__like-btn" type="button"></button>
-                    </div>
-                </article>
-                <article class="element">
-                    <img class="element__img" alt="Фотография места" src="./images/park_drakonov.jpeg">
-                    <div class="element__caption">
-                        <h2 class="element__title">Парк драконов</h2>
-                        <button class="element__like-btn" type="button"></button>
-                    </div>
-                </article>
-                <article class="element">
-                    <img class="element__img" alt="Фотография места" src="./images/tlyakovskogo.jpeg">
-                    <div class="element__caption">
-                        <h2 class="element__title">Бухта Теляковского</h2>
-                        <button class="element__like-btn" type="button"></button>
-                    </div>
-                </article>
-                <article class="element">
-                    <img class="element__img" alt="Фотография места" src="./images/astafyeva.jpeg">
-                    <div class="element__caption">
-                        <h2 class="element__title">Бухта Астафьева</h2>
-                        <button class="element__like-btn" type="button"></button>
-                    </div>
-                </article>
-                <article class="element">
-                    <img class="element__img" alt="Фотография места" src="./images/triozerje.jpeg">
-                    <div class="element__caption">
-                        <h2 class="element__title">Бухта Триозерье</h2>
-                        <button class="element__like-btn" type="button"></button>
-                    </div>
-                </article>
-                <article class="element">
-                    <img class="element__img" alt="Фотография места" src="./images/Dybovaya.jpeg">
-                    <div class="element__caption">
-                        <h2 class="element__title">Бухта Дубовая</h2>
-                        <button class="element__like-btn" type="button"></button>
-                    </div>
-                </article>
+                <template id="card">
+                    <article class="element">
+                        <button class="element__trash" type="button"></button>
+                        <img class="element__img" alt="Фотография места" src="./images/elem1.jpg" role="button">
+                        <div class="element__caption">
+                            <h2 class="element__title">Карачаевск</h2>
+                            <button class="element__like-btn" type="button"></button>
+                        </div>
+                    </article>
+                </template>
             </section>
         </main>
         <footer class="footer">
             <p class="footer__copyright">© 2023. Евгений Салаутин</p>
         </footer>
-        <div class="popup">
+        <div class="popup editPopup">
             <div class="popup__container">
                 <button type="button" class="popup__close-btn"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
@@ -79,6 +47,24 @@
                     <input type="text" name="status" placeholder="Статус" class="popup__text popup__text_type_status">
                     <button type="submit" class="popup__submit-btn">Сохранить</button>
                 </form>
+            </div>
+        </div>
+        <div class="popup addPopup">
+            <div class="popup__container">
+                <button type="button" class="popup__close-btn"></button>
+                <h2 class="popup__title">Новое место</h2>
+                <form name="profile-info" class="popup__form">
+                    <input type="text" name="name" placeholder="Название" class="popup__text popup__text_type_name">
+                    <input type="text" name="status" placeholder="Ссылка на картинку" class="popup__text popup__text_type_photo-link">
+                    <button type="submit" class="popup__submit-btn">Создать</button>
+                </form>
+            </div>
+        </div>
+        <div class="popup cardPopup">
+            <div class="popup__container">
+                <button type="button" class="popup__close-btn"></button>
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <img class="popup__image" alt="фото места" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/kamchatka.jpg">
             </div>
         </div>
         <script src="./scripts/index.js" defer></script>
