--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
             <div class="popup__container">
                 <button type="button" class="popup__close-btn"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <form name="profile-info" class="popup__form">
-                    <input type="text" name="name" placeholder="Имя" class="popup__text popup__text_type_name">
-                    <input type="text" name="status" placeholder="Статус" class="popup__text popup__text_type_status">
+                <form name="profileInfo" class="popup__form" novalidate>
+                    <input id="name-input" type="text" name="name" placeholder="Имя" class="popup__text popup__text_type_name" required minlength="2" maxlength="40">
+                    <span class="name-input-error popup__text-error"></span>
+                    <input id="status-input" type="text" name="status" placeholder="Статус" class="popup__text popup__text_type_status" required minlength="2" maxlength="200">
+                    <span class="status-input-error popup__text-error"></span>
                     <button type="submit" class="popup__submit-btn">Сохранить</button>
                 </form>
             </div>
@@ -54,9 +56,11 @@
             <div class="popup__container">
                 <button type="button" class="popup__close-btn"></button>
                 <h2 class="popup__title">Новое место</h2>
-                <form name="profile-info" class="popup__form">
-                    <input type="text" name="name" placeholder="Название" class="popup__text popup__text_type_name">
-                    <input type="text" name="status" placeholder="Ссылка на картинку" class="popup__text popup__text_type_photo-link">
+                <form name="cardInfo" class="popup__form" novalidate>
+                    <input id="cardName-input" type="text" name="name" placeholder="Название" class="popup__text popup__text_type_name"required minlength="2" maxlength="30">
+                    <span class="cardName-input-error popup__text-error"></span>
+                    <input id="photo-link-input" type="url" name="photo-link" placeholder="Ссылка на картинку" class="popup__text popup__text_type_photo-link" required>
+                    <span class="photo-link-input-error popup__text-error"></span>
                     <button type="submit" class="popup__submit-btn">Создать</button>
                 </form>
             </div>
