--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="./scripts/initialCards.js"></script>
+        <script src="./scripts/validate.js"></script>
         <link rel="stylesheet" href="./pages/index.css">
         <title>Место</title>
     </head>
