--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <footer class="footer">
             <p class="footer__copyright">© 2023. Евгений Салаутин</p>
         </footer>
-        <div class="popup profile_edit-form">
+        <div class="popup edit_profile">
             <div class="popup__container">
                 <button type="button" class="popup__close-btn"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
@@ -53,7 +53,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup element_add-form">
+        <div class="popup card_add">
             <div class="popup__container">
                 <button type="button" class="popup__close-btn"></button>
                 <h2 class="popup__title">Новое место</h2>
@@ -66,7 +66,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup element_open-card">
+        <div class="popup card_opened">
             <div class="popup__img-container">
                 <button type="button" class="popup__close-btn"></button>
                 <img class="popup__image" alt="фото места" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/kamchatka.jpg">
