--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="./scripts/initialCards.js"></script>
-        <script src="./scripts/validate.js"></script>
         <link rel="stylesheet" href="./pages/index.css">
         <title>Место</title>
     </head>
@@ -73,6 +72,6 @@
                 <p class="popup__img-text">Камчатка</p>
             </div>
         </div>
-        <script src="./scripts/index.js" defer></script>
+        <script type="module" src="./scripts/index.js" defer></script>
     </body>
 </html>
