--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
                 <p class="popup__img-text">Камчатка</p>
             </div>
         </div>
-        <script type="module" src="./scripts/index.js" defer></script>
+        <script type="module" src="./pages/index.js" defer></script>
     </body>
 </html>
