--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="./scripts/initialCards.js"></script>
-        <link rel="stylesheet" href="./pages/index.css">
         <title>Место</title>
     </head>
     <body class="page">
         <header class="header">
-            <img src="./images/header__logo.svg" alt="Логотип" class="header__logo">
+            <img src="<%=require('./images/header__logo.svg')%>" alt="Логотип" class="header__logo">
         </header>
         <main>
             <section class="profile">
-                <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар">
+                <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="аватар">
                 <div class="profile__info">
                     <div class="profile__title">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -72,6 +71,5 @@
                 <p class="popup__img-text">Камчатка</p>
             </div>
         </div>
-        <script type="module" src="./pages/index.js" defer></script>
     </body>
 </html>
