--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
         </header>
         <main>
             <section class="profile">
-                <div class="profile__overlay-container">
-                    <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="аватар">
+                <div type="button" class="profile__overlay-container">
+                    <img class="profile__avatar" src="" alt="аватар">
                 </div>
                 <div class="profile__info">
                     <div class="profile__title">
@@ -87,8 +87,8 @@
                 <button type="button" class="popup__close-btn"></button>
                 <h2 class="popup__title">Обновить аватар</h2>
                 <form name="cardInfo" class="popup__form" novalidate>
-                    <input id="update-profile-photo-input" type="url" name="photo-avatar-link" placeholder="Ссылка на фото" class="popup__text popup__text_type_photo-avatar-link"required minlength="2" maxlength="30">
-                    <span class="update-profile-photo-input popup__text-error"></span>
+                    <input id="update-profile-photo-input" type="url" name="photo-avatar-link" placeholder="Ссылка на фото" class="popup__text popup__text_type_photo-link"required>
+                    <span class="update-profile-photo-input-error popup__text-error"></span>
                     <button type="submit" class="popup__submit-btn">Сохранить</button>
                 </form>
             </div>
