hotfix: delete avatar src

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <main>
             <section class="profile">
                 <div type="button" class="profile__overlay-container">
-                    <img class="profile__avatar" src="" alt="аватар">
+                    <img class="profile__avatar">
                 </div>
                 <div class="profile__info">
                     <div class="profile__title">
